# beng-lod-server

./: .flake8  .gitignore  CODEOWNERS  Dockerfile  Pipfile  Pipfile.lock.deployed  README.md  getKBItemsWithSubject.sparql  getKBSubjectsMatchingText.sparql  getLocationsForProgram.sparql  getPersonProperties.sparql  getPersonsForProgram.sparql  getPersonsForProgramViaProperty.sparql  getPersonsRelatedToPerson.sparql  getProgramsByCreatorRole.sparql  getProgramsForPerson.sparql  getProgramsForPersonViaProperty.sparql  getSamplePrograms.sparql  getSubjectsForPerson.sparql  getSubjectsForPersonViaProperty.sparql  getSubjectsForProgram.sparql  label_triples_and_types_for_entities_and_roles.ttl  ldutil_compare_program_2102501280372631431.ttl  mw_ldutil_compare_program_2102501280372631431.ttl  preflabels_and_type_for_lod_resource.ttl  pyproject.toml  requirements.txt  triples_for_blank_node.ttl  triples_for_lod_resource.ttl
.github/: dependabot.yml  prd-deploy.yml
.github/workflows/: actions-test.yml  all-branches-but-main.yml  all-branches-but-master.yml  aws-ecr.yml  build-push-image.yml  build-test-push.yml  check-project.yml  cicd.yml  deploy.yml  ghcr.yml  main-branch.yml  main.yml  manual-deploy.yml  master-branch.yml  pythonapp.yml  test-all-branches.yml  test-deploy-master.yml  test.yml
config/: config.yml
queries/: 01_labels_and_types_entities_roles.rq  02_labels_and_types_entities_roles.rq  03_labels_and_types_entities_roles.rq  bg_inverse_relations.rq  bg_inverse_relations_properties_count.rq  bg_is_nisv_cat_resource.rq  bg_is_skos_resource.rq  bg_lod_resource_all_triples_and_bnodes.rq  gtaa_lod_resource_all_triples_and_bnodes.rq  inverse_relations.rq  inverse_relations_ask.rq  mw_lod_resource_all_triples_and_bnodes.rq
resource/: beng-core.ttl  bengSchema-v04.ttl  bengSchema.json  bengSchema.ttl  bg_basic.xsd  bg_basic0.xsd  bg_basic1.xsd  bg_basic2.xsd  daan-mapping-schema-org.ttl  daan-mapping-storage.ttl  daan-mapping.ttl  data_catalog.ttl  data_catalog_unit_test.ttl  exampleMappedData207485.ttl  exampleMappedData4088370.ttl  exampleMappedData4143220.ttl  exampleMappedData5124400.ttl  example_queries.json  getSamplePrograms.sparql  get_preflabels.rq  get_preflabels_and_type.rq  get_triples_for_lod_resource.rq  get_triples_for_skos_concept.rq  inversePropertiesSchema.ttl  mappingToSchemaOrgViaSubProperties.ttl  music_roles.csv  nisv-bg-oai2lod-v01-test.xsl  nisv-bg-oai2lod-v01.xsl  nisv-bg-oai2lod-v02.xsl  nisv-bg-oai2lod-v03.xsl  nisv-bg-oai2lod-v04.xsl  nisv-bg-oai2lod-v05.xsl  nisv-bg-oai2lod-v05_no_carriers.xsl  nisv-bg-oai2lod.xsl  ob_link_matches.json  schema-dot-org.ttl  test-bg-rdfs-01.ttl  test.xsl
resource/program/: 3924713  5354463.xml
resource/series/: 19280
resource/sparql queries/: testQuery.sparql
src/: SchemaInMemory.py  config.py  dereference_uris.py  ontodoc.py  output_carrier.ttl  output_clip.ttl  output_program.ttl  output_season.ttl  output_series.ttl  server.py  settings-example.py
src/apis/: __init__.py  api_util.py  mime_type_util.py
src/config/: config_util.py  settings_example.py
src/importer/: DAANSchemaImporter.py  DatasetSheetImporter.py
src/models/: BaseRdfConcept.py  DAANJsonModel.py  DAANRdfModel.py  DAANSchemaImporter.py  DatasetApiUriLevel.py  NISVRdfConcept.py  ResourceApiUriLevel.py  ResourceURILevel.py  SDORdfConcept.py  SDORdfModel.py  import_models.py  import_schema.py
src/schema/: class-nisvactingentity.html  class-nisvaudiovisualobject.html  class-nisvbroadcaster.html  class-nisvbroadcaststation.html  class-nisvcarrier.html  class-nisvcast.html  class-nisvcontext.html  class-nisvcontractor.html  class-nisvcreator.html  class-nisvdistributableentity.html  class-nisventityinrole.html  class-nisventitywithduration.html  class-nisvfunder.html  class-nisvgenre.html  class-nisvlanguage.html  class-nisvlanguageusage.html  class-nisvlocation.html  class-nisvmusicstyle.html  class-nisvnationality.html  class-nisvorganisation.html  class-nisvoriginalcreator.html  class-nisvperson.html  class-nisvplayableaudiovisualobject.html  class-nisvproducer.html  class-nisvprogram.html  class-nisvpublication.html  class-nisvqualification.html  class-nisvrecording.html  class-nisvrecordingorpublication.html  class-nisvscenedescription.html  class-nisvseason.html  class-nisvsequencemember.html  class-nisvseries.html  class-nisvspeaker.html  class-nisvsponsor.html  class-nisvsubject.html  class-nisvtargetgroup.html  class-nisvtitle.html  class-skosconcept.html  entities-az.html  (+144 more)
src/sparql/: get_locations_for_program.sparql  get_person_for_program.sparql
src/templates/: base.html  bg_base.html  bg_resource.html  lod_view.html  lod_view_inverse_relations.html  lod_view_iri_bnode.html  (+27 more)
(+170 files in other folders)
