[tool.poetry]
name = "beng-lod-server"
version = "1.0"
description = "Webserver serving LOD for the NISV catalogue items, datasets and GTAA."
authors = [
  "Willem Melder <wmelder@beeldengeluid.nl>",
  "Mari Wigham <mwigham@beeldengeluid.nl>",
  "Govert Brinkmann <gbrinkmann@beeldengeluid.nl>"
  ]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "~=3.11.0"
requests = "==2.32.3"
rdflib = "==6.3.2"
validators = "==0.35.0"
pyyaml = "==6.0.2"
Flask-Cors = "==5.0.1"
flask = "==2.2.5"
flask-restx = "==1.3.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
pytest-cov = "==6.1.1"
mockito = "==1.5.4"
black = "==25.1.0"
flake8 = "==7.2.0"
flake8-bugbear = "==24.12.12"
mypy = "==1.15.0"
types-requests = "==2.32.0.20250328"
types-flask-cors = "==5.0.0.20250413"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "beng-lod-server"
requires-python = "~=3.11.0"

[tool.black]
# we use all the defaults

[tool.pytest.ini_options]
testpaths = [
  "src/tests/unit_tests",
]
addopts = [
#  "--cov",
]

[tool.coverage.run]
omit = [
  "src/tests/*"
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
  "apis.*",
  "config.*",
  "elasticsearch",
  "flask_restx",
  "flask",
  "importer.*",
  "mockito",
  "models.*",
  "numpy",
  "pytest",
  "rdflib.*",
  "validators.*",
  "yaml.*",
]
ignore_missing_imports = true
